adaptation mobile fixin  the project

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -722,7 +722,7 @@ li {
   }
 
   .from-page_item {
-    margin-left: 10vw;
+    padding: 2vw;
     margin-top: 2%;
   }
 
@@ -780,6 +780,7 @@ li {
 
   .about_title {
     font-size: 6.125vw;
+    margin-top: 5vw;
   }
 
   .about_description {
